fix: nav - img/title gap fixed

--- a/src/nav/top/top.nav.sass
+++ b/src/nav/top/top.nav.sass
@@ -17,7 +17,7 @@
     wb-img
       display: flex
       align-items: center
-      flex: 0 70px
+      flex: 0 auto
       margin-right: 20px
       height: 100%
   wn-title
